--- a/homeStyles.css
+++ b/homeStyles.css
@@ -11,6 +11,7 @@ html, body {
   zoom: 1.0 ;
 }
 
+
 #Menu {
     text-align: center;
     background-color: #3F0F3F;
@@ -47,4 +48,42 @@ img{
     max-width:2%;
     height:auto;
 
+}
+
+@media screen and (max-width: 400px) {
+  	#menuTitle, .logos, .menuItems, img {
+    	width: 100%; 
+  	}
+
+  	#Menu {
+	    text-align: center;
+	    background-color: #3F0F3F;
+	    padding-top: 2vh;
+	    padding-bottom: 2vh;
+	    margin-left: 0vw;
+	    color: white;
+	}
+
+	#menuTitle{
+		background-color: #3F0F3F;
+	    color: white;
+	    margin-left: 1vw;
+	    font-size: 2.5vw;
+
+
+	}
+	.menuItems{
+	    background-color: #3F0F3F;
+	    color: white;
+	    margin-left: 1vw;
+	    font-size: 2vw;
+	}
+
+	.logos{
+	    background-color: #3F0F3F;
+	    color: white;
+	    margin-left: 1vw;
+		vertical-align="bottom"
+
+	}
 }
