--- a/homeStyles.css
+++ b/homeStyles.css
@@ -77,7 +77,7 @@ html, body {
 }
 
 .SectorMain{
-  background:linear-gradient(#3d6170, #264653);
+  background:linear-gradient(#23395d, #1c2e4a);
   padding-top: 25vh;
   padding-bottom: 15vh;
   padding-right: 10vh;
@@ -119,7 +119,7 @@ html, body {
   margin: 2vw 1vh;
   cursor: pointer;
   border-radius: 1vw;
-  background:#264653;
+  background:#23395d;
 }
 
 .button:hover {
@@ -136,13 +136,6 @@ html, body {
   border-radius: 1vw;
   background:#09C269;
 }
-
-
-
-
-
-
-
 
 .roundimage{
   border-radius:0vw;
@@ -305,7 +298,7 @@ html, body {
   color: white;
   align-self:center;
   font-size: 1.8vw;
-  padding-right: 10vw;
+  padding-right: 0vw;
   padding-left: 5vw;
   display: block;
   margin-top: auto;
@@ -317,7 +310,7 @@ html, body {
   color: white;
   align-self:center;
   font-size: 2vw;
-  padding-right: 10vw;
+  padding-right: 0vw;
   padding-left: 5vw;
   display: block;
   margin-top: 3vh;
@@ -333,7 +326,7 @@ html, body {
   border-radius: 5vw;
 }
 
-.hisectors{
+.sectors{
   color: black;
   padding-top: 0vh;
   padding-bottom: 0vh;
@@ -347,22 +340,6 @@ html, body {
 }
 
 
-
-
-.sector9{
-  margin-top: 0vh;
-  color: white;
-  padding-top: 3vh;
-  padding-bottom: 3vh;
-  padding-right: 10vh;
-  padding-left: 10vh;
-  margin-left: 5vw;
-  margin-right: 5vw;
-  margin-top: 3vh;
-  margin-bottom: 3vh;
-  border-radius: 2vw;
-  text-align: center;
-}
 
 
 
@@ -380,126 +357,362 @@ a{
 
 
 @media screen and (max-width: 800px) {
-    #Banner, #Title, #Menu, #menuTitle, .logos, .menuItems, img {
+    {
       width: 100%; 
     }
 
     html, body {
     margin: 0;
     padding: 0;
-    font-family: Tahoma;
-    background-color: #042f75;
+    height:100%;
+    padding: 0;
+    font-family: sans-serif;
+    background-color: #73e0e9;
 
   }
 
-  #nav1{
-    color: black;
-    font-size: 3vw;
-    margin-left: 1.5vw;
-    margin-right: 1vw;
-  }
 
-  .nav9{
-    color: black;
-    font-size: 2.2vw;
-    margin-right: 1vw;
+@viewport {
+  width: device-width ;
+  zoom: 1.0 ;
+}
 
-  }
 
-  .navTrademark{
-    color: black;
-    font-size: 1.6vw;
-    text-align: center;
-  }
-
-  .navL{
-    margin-left: 0.5vw;
-  }
-
-  .sectorMain{
-    color: white;
-    padding-top: 2vh;
-    padding-bottom: 2vh;
-    padding-right: 2vh;
-    padding-left: 2vh;
-    margin-left: 5vw;
-    margin-right: 5vw;
-    margin-top: 2vh;
-    margin-bottom: 2vh;
-    border-radius: 2vw;
-  }
-
-  .sector{
-    color: white;
-    padding-top: 1vh;
-    padding-bottom: 1vh;
-    padding-right: 1vh;
-    padding-left: 1vh;
-    margin-left: 5vw;
-    margin-right: 5vw;
-    margin-top: 3vh;
-    margin-bottom: 0vh;
-    border-radius: 2vw;
-  }
-
-  .sectors{
+#title{
   color: white;
-  padding-top: 2vh;
-  padding-bottom: 3vh;
-  padding-right: 3vh;
-  padding-left: 3vh;
-  margin-top: 0vh;
-  margin-bottom: 2vh;
-  border-radius: 3vw;
-  }
+  font-size: 2.5vw;
+  margin-right: 1vw;  
+  font-family: Verdana, Geneva, sans-serif;
+}
 
-  .sector9{
-  margin-top: 0vh;
+#ProjectFutureTitle{
   color: white;
-  padding-top: 0vh;
-  padding-bottom: 1vh;
-  padding-right: 10vh;
-  padding-left: 10vh;
-  margin-left: 5vw;
-  margin-right: 5vw;
-  margin-top: 1vh;
-  margin-bottom: 3vh;
-  border-radius: 2vw;
+  font-size: 3.5vw;
+  left: 1vw;  
+  font-family: Verdana, Geneva, sans-serif;
+
+}
+
+#PEACETitle{
+  color: white;
+  font-size: 1.9vw;
+  font-family: Verdana, Geneva, sans-serif;
+}
+
+
+.logos{
+  max-width:6%;
+  height:auto;
+}
+
+
+.navL{
+  margin-left: 0vw;
+}
+
+
+
+.navTrademark{
+  color: black;
+  font-size: 1.6vw;
   text-align: center;
 }
 
-  .textView{
-    color: black;
-  }
+.navScreen{
+  margin-left: 3vw;
+  display:block;
+}
 
-  .images{
-    color: white;
-      max-width:20%;
-      height: auto;
-      margin-left: 2vw;
-  }
+.NavSector{
+  color: #212121;
+  padding-top: 0.5vh;
+  padding-bottom: 0.5vh;
+  padding-right: 5vw;
+  padding-left: 5vw;
+  margin-left: 0vw;
+  margin-right: 0vw;
+  margin-top: 0vh;
+  border-radius: 0vw;
+  font-size:0;
+  z-index:1; /*Add this*/
+  overflow: hidden;
+  position: fixed; /* Set the navbar to fixed position */
+  top: 0; /* Position the navbar at the top of the page */
+  width: 100%; /* Full width */
+}
 
-  .text{
-    color: black;
-    font-size: 1.5vw;
-  }
+.SectorMain{
+  background:linear-gradient(#23395d, #1c2e4a);
+  padding-top: 10vh;
+  padding-bottom: 5vh;
+  padding-right: 10vh;
+  padding-left: 10vh;
+  margin-left: 0vw;
+  margin-right: 0vw;
+  margin-top: 0vh;
+  margin-bottom: 0vh;
+  border-radius: 0vw;
+  text-align: center;
+  font-size:0;
+}
 
-  .headers{
-    color: white;
-    font-size: 4vw;
-
-  }
-
-  #TrademarkSrivatsav{
-    background-color: #042f75;
-    color: white;
-    text-align: center;
-    font-size: 2vw;
-    padding-top: 0.5vh;
-    padding-bottom: 1vh;
-  }
-
-
+#DedicatedTitle{
+  color: white;
+  font-size: 5vw;
+  font-family: Verdana, Geneva, sans-serif;
 
 }
+
+#DedicatedParagraph{
+  color: #d8dcdc;
+  font-size: 3.9vw;
+  margin-left: 0vw;
+  margin-right: 0vw;
+  font-family: "Times New Roman", Times, serif;
+}
+
+.button {
+  border: solid;
+  border-color: white;
+  color: white;
+  padding: 3vw 4.5vw;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 3vw;
+  margin: 2vw 1vh;
+  cursor: pointer;
+  border-radius: 1vw;
+  background:#23395d;
+}
+
+.button:hover {
+  border: solid;
+  border-color: #09C269;
+  color: white;
+  padding: 3vw 4.5vw;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 3vw;
+  margin: 2vw 1vh;
+  cursor: pointer;
+  border-radius: 1vw;
+  background:#09C269;
+}
+
+.roundimage{
+  border-radius:0vw;
+  height:15vh;
+  max-width:100%;
+  border-color: white;
+  border-style: solid;
+  border-width: 0vw;
+  border-radius: 1.5vw;
+  filter: brightness(60%);
+}
+
+.roundimage:hover{
+  border-radius:0vw;
+  height:42vh;
+  max-width:100%;
+  border-color: white;
+  border-style: solid;
+  border-radius: 1.5vw;
+  cursor: pointer;
+  filter: brightness(42%);
+}
+
+.roundText{
+  border-radius:0vw;
+  height:42vh;
+  max-width:100%;
+  border-color: white;
+  border-style: solid;
+  border-width: 0vw;
+}
+
+.textModes1 {
+  position: absolute;
+  bottom: 7vh; 
+  left: 8vw;
+  cursor: pointer;
+}
+
+.textModes2 {
+  position: absolute;
+  bottom: 7vh;
+  left: 3vw;
+  cursor: pointer;
+}
+
+.textModes3 {
+  position: absolute;
+  bottom: 7vh;
+  left: 5vw;
+  cursor: pointer;
+}
+
+
+.column {
+  float: left;
+  width: 29.3%;
+  margin-left: 3vw;
+  padding: 0vw;
+  position: relative;
+  text-align: center;
+  color: white;
+  font-size: 3.5vw;
+}
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.Navsector1{
+  color: black;
+  padding-top: 5vh;
+  padding-bottom: 0vh;
+  padding-right: 0vh;
+  padding-left: 0vh;
+  margin-left: 0vw;
+  margin-right: 0vw;
+  margin-top: 0vh;
+  margin-bottom: 0vh;
+  border-radius: 0vw;
+}
+
+.Navsector2{
+  color: black;
+  padding-top: 3vh;
+  padding-bottom: 4vh;
+  padding-right: 0vh;
+  padding-left: 0vh;
+  margin-left: 0vw;
+  margin-right: 0vw;
+  margin-top: 0vh;
+  margin-bottom: 0vh;
+  border-radius: 0vw;
+}
+
+.sectors{
+  color: black;
+  padding-top: 8vh;
+  padding-bottom: 8vh;
+  padding-right: 10vw;
+  padding-left: 10vw;
+  margin-left: 0vw;
+  margin-right: 0vw;
+  margin-top: 0vh;
+  margin-bottom: 0vh;
+  border-radius: 0vw;
+}
+
+.sectortext{
+  color: black;
+}
+
+.sectorimages{
+  color: white;
+  max-width: 42%;
+  height: auto;
+  margin-left: 3vw;
+}
+
+.text{
+  color: white;
+  font-size: 1.5vw;
+}
+
+.headers{
+  color: white;
+  font-size: 4vw;
+  align-self:center;
+  padding-right: 0vw;
+  padding-left: 5vw;
+  display: block;
+}
+
+
+.sector1{
+  color: white;
+  float: left;
+  width: 45%;
+  height: 23vh;
+  padding: 0vw;
+  padding-top: 5vh;
+  padding-bottom: 2vh;
+  
+}
+
+.sector2{
+  color: black;
+  float: left;
+  width: 55%;
+  height: 23vh;
+  padding-top: 5vh;
+  padding-bottom: 2vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  }
+
+.interestingtext{
+  color: white;
+  align-self:center;
+  font-size: 3vw;
+  padding-right: 0vw;
+  padding-left: 5vw;
+  display: block;
+  margin-top: auto;
+  margin-bottom: auto;
+  width: 80%; 
+}
+
+.textlink{
+  color: white;
+  align-self:center;
+  font-size: 3.5vw;
+  padding-right: 0vw;
+  padding-left: 5vw;
+  display: block;
+  margin-top: 3vh;
+  margin-bottom: auto;
+  width: 80%; 
+  text-decoration: underline;
+}
+
+.interestingimages{
+  color: white;
+  width: 85%;
+  height: 15vh;
+  border-radius: 5vw;
+}
+
+.sectors{
+  color: black;
+  padding-top: 0vh;
+  padding-bottom: 0vh;
+  padding-right: 0vw;
+  padding-left: 0vw;
+  margin-left: 0vw;
+  margin-right: 0vw;
+  margin-top: 0vh;
+  margin-bottom: 0vh;
+  border-radius: 0vw;
+}
+
+
+
+
+
+p{
+  color: white;
+}
+
+a{
+  color: #73e0e9;
+}
+
 
