--- a/actStyles.css
+++ b/actStyles.css
@@ -164,13 +164,13 @@ html, body {
   font-size: 2.3vw;
   padding-top: 5vh;
   margin-left: 5vw;
-  color: black;
+  color: #32292F;
 }
 .section1para{
   text-align: right;
   font-size: 1.5vw;
   margin-left: 3vw;
-  color: black;
+  color: #32292F;
 }
 
 
