--- a/programStyles.css
+++ b/programStyles.css
@@ -2,13 +2,12 @@ html, body {
   margin: 0;
   height:100%;
   padding: 0;
-  background-color: #faf5f5;
+  background-color: #52B788;
 }
 
 .mountainsDiv{
   margin-top: 15vh;
   background-color: #ffffff;
-  box-shadow: 0px 0px 2px 0px #000000;
 }
 .mountains{
   width: 100%;
