--- a/programStyles.css
+++ b/programStyles.css
@@ -6,8 +6,8 @@ html, body {
 }
 
 .mountainsDiv{
-  margin-top: 15vh;
-  background-color: #ffffff;
+  margin-top: 10vh;
+  background-color: #52B788;
 }
 .mountains{
   width: 100%;
