--- a/satStyles.css
+++ b/satStyles.css
@@ -6,10 +6,9 @@ html, body {
 }
 
 .mountainsDiv{
-  margin-top: 15vh;
+  margin-top: 10vh;
   margin-bottom: 3.5vh;
-  background-color: #ffffff;
-  box-shadow: 0px 0px 0px 0px #000000;
+  background-color: #52B788;
 }
 .mountains{
   width: 100%;
