--- a/actStyles.css
+++ b/actStyles.css
@@ -5,6 +5,11 @@ html, body {
   background-color: #077187;
 }
 
+@viewport{
+  width: device-width;
+  zoom: 1.0;
+}
+
 .mountainsDiv{
   margin-top: 10vh;
   margin-bottom: 3.5vh;
@@ -412,4 +417,397 @@ h1{
 
 p{
   color: white;
+}
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 600px){
+  {
+    width: 100%;
+  }
+  html, body {
+  margin: 0;
+  height:100%;
+  padding: 0;
+  background-color: #52B788;
+  }
+
+  #navbar{
+    background-color: #0C1C43;
+    padding: 2%;
+    margin: 0%;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1;
+  }
+
+  #logo{
+    width: 13%;
+    margin-right: 2%;
+    margin-left: 3%;
+  }
+
+  .title{
+    color: #EEEEF4;
+    margin-right: 1%;
+    font-size: 2vw;
+    vertical-align: middle;
+    height: 0.5vh;
+  }
+
+  .title1{
+    color: #EEEEF4;
+    margin-right: 6%;
+    font-size: 2vw;
+    vertical-align: middle;
+    height: 0.5vh;
+  }
+
+  #login{
+    color: #EEEEF4;
+    margin-right: 1%;
+    font-size: 2vw;
+    vertical-align: middle;
+    height: 0.5vh;
+  }
+
+  #signup{
+    background-color: #52B788;
+    border: solid;
+    border-color: #52B788;
+    color: white;
+    padding: 0.5vh 3vw;
+    text-align: center;
+    vertical-align: middle;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 2vw;
+    border-radius: 6%;
+    margin-right: 3%;
+  }
+
+  #signup:hover{
+    background-color: #52B788;
+    border: solid;
+    border-color: white;
+    color: white;
+    padding: 0.5vh 3vw;
+    vertical-align: middle;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 2vw;
+    border-radius: 6%;
+    margin-right: 3%;
+  }
+
+
+  .mountainsDiv{
+    margin-top: 5vh;
+    margin-bottom: 3.5vh;
+    background-color: #52B788;
+  }
+  .mountains{
+    width: 100%;
+    height: auto;
+  }
+
+
+  .mountainstext{
+    padding-top: 1vw;
+    padding-bottom: 1vw; 
+    background-color: #ffffff;
+    padding-left: 30vw;
+  }
+
+  .mainDiv1{
+    margin-top: -10vh;
+    height: 40vh;
+    padding-top: 0vh;
+    padding-bottom: 0vh;
+    padding-left: 2vh;
+    padding-right: 2vh;
+  }
+
+  .mainDiv3{
+    margin-top: -3vh;
+    height: 40vh;
+    padding-top: 3vh;
+    padding-bottom: 0vh;
+    padding-left: 2vh;
+    padding-right: 2vh;
+  }
+
+  .mainDiv2{
+    height: 40vh;
+    padding-top: 0vh;
+    padding-bottom: 0vh;
+    padding-left: 2vh;
+    padding-right: 2vh;
+  }
+
+
+
+
+
+  .sectionhalf1{
+    float: left;
+    width: 49%;
+    height: 40vh;
+    margin-right: 3vh;
+    text-align: center;
+  }
+  .sectionhalf2{
+    float: left;
+    width: 49%;
+    height: 40vh;
+    text-align: center;
+  }
+  .sectionthird1{
+    float: left;
+    width: 100%;
+    height: 20vh;
+    margin-right: 1vh;
+    text-align: center;
+  }
+  .sectionthird2{
+    float: left;
+    width: 50%;
+    height: 10vh;
+    margin-right: 1vh;
+    text-align: center;
+  }
+  .sectionthird3{
+    float: left;
+    width: 47%;
+    height: 10vh;
+    text-align: center;
+  }
+
+  .section1header{
+    text-align: right;
+    font-size: 4vw;
+    padding-top: 5vh;
+    margin-left: 6vw;
+    margin-right: 6vw;
+  }
+  .section1para{
+    text-align: right;
+    font-size: 2vw;
+    margin-left: 6vw;
+    margin-right: 6vw;
+  }
+
+
+
+  .sectionfourth1{
+    float: left;
+    width: 30%;
+    height: 20vh;
+    margin-right: 1vh;
+    text-align: center;
+  }
+  .sectionfourth2{
+    float: left;
+    width: 30%;
+    height: 20vh;
+    margin-right: 1vh;
+    text-align: center;
+  }
+  .sectionfourth3{
+    float: left;
+    width: 30%;
+    height: 20vh;
+    margin-right: 1vh;
+    text-align: center;
+  }
+  .sectionfourth4{
+    float: left;
+    width: 100%;
+    height: 20vh;
+    text-align: center;
+  }
+  .section4header{
+    text-align: left;
+    font-size: 4vw;
+    padding-top: 5vh;
+    margin-left: 6vw;
+  }
+  .section4para{
+    text-align: left;
+    font-size: 2vw;
+    margin-left: 6vw;
+    margin-right: 6vw;
+  }
+
+
+  .image2{
+    width: 60%;
+    margin-top: 9vh;
+    height: auto;
+    opacity: 95%;
+  }
+
+  .image2:hover{
+    width: 65%;
+    margin-top: 6vh;
+    height: auto;
+    opacity: 95%;
+    padding: 1vw;
+    border-radius: 5%;
+    border: solid;
+    border-color: white;
+  }
+
+  .image3{
+    width: 80%;
+    margin-top: -2vh;
+    height: auto;
+    opacity: 95%;
+  }
+
+  .image4{
+    width: 50%;
+    margin-top: -6vh;
+    height: auto;
+    opacity: 95%;
+    padding: 1vw;
+  }
+
+  .image3:hover{
+    width: 85%;
+    margin-top: 0vh;
+    height: auto;
+    opacity: 95%;
+    border: solid;
+    border-color: white;
+    border-radius: 3%;
+  }
+
+  .image4:hover{
+    width: 55%;
+    margin-top: 0vh;
+    height: auto;
+    opacity: 95%;
+    border: solid;
+    border-color: white;
+    border-radius: 3%;
+    padding-top: 0.5vw;
+    padding-bottom: 0.5vw;
+    padding-left: 1.5vw;
+    padding-right: 1.5vw;
+
+  }
+
+
+  .image5{
+    width: 60%;
+    margin-top: 5vh;
+    height: auto;
+    opacity: 95%;
+  }
+  .image6{
+    width: 60%;
+    margin-top: 4.5vh;
+    height: auto;
+    opacity: 95%;
+    padding: 1vw;
+  }
+  .image7{
+    width: 55%;
+    margin-top: 5vh;
+    height: auto;
+    opacity: 95%;
+  }
+
+
+
+  .image5:hover{
+    width: 55%;
+    margin-top: 4vh;
+    height: auto;
+    opacity: 95%;
+    border-radius: 5%;
+    border: solid;
+    border-color: white;
+    border-radius: 7%;
+    padding: 1vw;
+  }
+  .image6:hover{
+    width: 95%;
+    margin-top: 3vh;
+    height: auto;
+    opacity: 95%;
+    border: solid;
+    border-color: white;
+    border-radius: 3%;
+    padding: 1vw;
+  }
+  .image7:hover{
+    width: 55%;
+    margin-top: 4vh;
+    height: auto;
+    opacity: 95%;
+    border: solid;
+    border-color: white;
+    border-radius: 5%;
+    padding: 1vw;
+  }
+
+  .image8{
+    width: 40%;
+    margin-top: 1vh;
+    height: auto;
+    opacity: 95%;
+  }
+  .image9{
+    width: 40%;
+    margin-top: 3vh;
+    height: auto;
+    opacity: 95%;
+  }
+
+
+  .image8:hover{
+    width: 45%;
+    margin-top: 1vh;
+    height: auto;
+    opacity: 95%;
+    border: solid;
+    border-color: white;
+    border-radius: 5%;
+    padding: 1vw;
+  }
+  .image9:hover{
+    width: 45%;
+    margin-top: 2vh;
+    height: auto;
+    opacity: 95%;
+    border: solid;
+    border-color: white;
+    border-radius: 5%;
+    padding: 1vw;
+  }
+
+  a{
+    text-decoration: none;
+  }
+
+  h1{
+    color: white;
+  }
+
+  p{
+    color: white;
+  }
+
 }
