--- a/Styles1.css
+++ b/Styles1.css
@@ -36,21 +36,14 @@ html, body {
 
 .title1{
   color: #EEEEF4;
-  margin-right: 19%;
+  margin-left: 30%;
+  margin-right: 5%;
   font-size: 1.3vw;
   vertical-align: middle;
   height: 0.5vh;
 }
 
 #login{
-  color: #EEEEF4;
-  margin-right: 3%;
-  font-size: 1.3vw;
-  vertical-align: middle;
-  height: 0.5vh;
-}
-
-#signup{
   background-color: #52B788;
   border: solid;
   border-color: #52B788;
@@ -60,11 +53,11 @@ html, body {
   text-decoration: none;
   display: inline-block;
   font-size: 1.3vw;
-  border-radius: 6%;
+  border-radius: 5px;
   margin-right: 3%;
 }
 
-#signup:hover{
+#login:hover{
   background-color: #52B788;
   border: solid;
   border-color: white;
