--- a/clubStyles.css
+++ b/clubStyles.css
@@ -53,47 +53,42 @@ html, body {
 
 .title1{
   color: #EEEEF4;
-  margin-right: 19%;
+  margin-left: 30%;
+  margin-right: 5%;
   font-size: 1.3vw;
   vertical-align: middle;
   height: 0.5vh;
 }
 
 #login{
-  color: #EEEEF4;
-  margin-right: 3%;
-  font-size: 1.3vw;
-  vertical-align: middle;
-  height: 0.5vh;
-}
-
-#signup{
   background-color: #52B788;
   border: solid;
   border-color: #52B788;
   color: white;
-  padding: 1vh 3vw;
+  padding: 1vh 2.5vw;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 1.3vw;
-  border-radius: 3%;
+  border-radius: 5px;
   margin-right: 3%;
 }
 
-#signup:hover{
+#login:hover{
   background-color: #52B788;
   border: solid;
   border-color: white;
   color: white;
-  padding: 1.5vh 3vw;
+  padding: 1.5vh 2.5vw;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 1.3vw;
-  border-radius: 3%;
+  border-radius: 6%;
   margin-right: 3%;
 }
+
+
 
 
 
@@ -106,16 +101,13 @@ html, body {
 }
 
 .club{
-  height: 40vh;
+  height: 45vh;
+  padding-top: 3vh;
   text-align: center;
   background-color: #ffffff;
-  border: solid;
-  border-color: black;
-  border-radius: 5px;
-  border-width: 0.2vw;
   margin-top: 5vh;
   margin-bottom: 5vh;
-
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.3), 0 30px 50px 0 rgba(0, 0, 0, 0.1);
 }
 
 .clubDiv{
@@ -175,6 +167,21 @@ html, body {
   border-width: 0.19vw;
   border-radius: 5px;
   border-color: #0C1C43;
+}
+
+.bookmarksbutton{
+  background-color: #52B788;
+  margin-left: 80%;
+  border: solid;
+  border-color: #52B788;
+  color: white;
+  padding: 1vh 2.5vw;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 0.9vw;
+  border-radius: 5px;
+  margin-right: 3%;
 }
 
 
