--- a/profileStyles.css
+++ b/profileStyles.css
@@ -2,7 +2,7 @@ html, body {
   margin: 0;
   height:90%;
   padding: 0;
-  background-color: #52B788;
+  background-color: #04A777;
 }
 
 @viewport{
@@ -45,9 +45,9 @@ html, body {
 }
 
 #login{
-  background-color: #52B788;
+  background-color: #04A777;
   border: solid;
-  border-color: #52B788;
+  border-color: #04A777;
   color: white;
   padding: 1vh 2.5vw;
   text-align: center;
@@ -59,7 +59,7 @@ html, body {
 }
 
 #login:hover{
-  background-color: #52B788;
+  background-color: #04A777;
   border: solid;
   border-color: white;
   color: white;
@@ -83,6 +83,10 @@ html, body {
   background-color: white;
   text-align: left;
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.3), 0 30px 50px 0 rgba(0, 0, 0, 0.1);
+}
+
+#profiledescription{
+  font-size: 1.1vw;
 }
 
 #bookmarks{
@@ -118,7 +122,7 @@ html, body {
 
 .bookmarksdiv{
   border: solid;
-  border-color: #52B788;
+  border-color: #04A777;
   color: white;
   width: 15%;
   height: 15vw;
