--- a/clubStyles.css
+++ b/clubStyles.css
@@ -184,6 +184,21 @@ html, body {
   margin-right: 3%;
 }
 
+.bookmarksbutton:hover{
+  background-color: #C52233;
+  margin-left: 80%;
+  border: solid;
+  border-color: #C52233;
+  color: white;
+  padding: 1vh 2.5vw;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 0.9vw;
+  border-radius: 5px;
+  margin-right: 3%;
+}
+
 
 .clubDescription{
   color: black;
@@ -303,7 +318,7 @@ a{
   }
 
   .mountainsDiv{
-    margin-top: 5vh;
+    margin-top: 9vh;
     background-color: #04A777;
   }
   .mountains{
@@ -399,30 +414,26 @@ a{
   }
 
   .club{
-    height: 19vh;
+    height: 55vh;
+    padding-top: 3vh;
     text-align: center;
     background-color: #ffffff;
-    border: solid;
-    border-color: black;
-    border-radius: 5px;
-    border-width: 0.2vw;
     margin-top: 5vh;
     margin-bottom: 5vh;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.3), 0 30px 50px 0 rgba(0, 0, 0, 0.1);
   }
 
   .clubDiv{
     color: white;
     padding-bottom: 1vh;
-    margin-top: 3.5vh;
-    margin-right: 0vw;
-    margin-left: 0vw;
+    margin: 1vh;
   }
 
   .clubText{
     color: white;
     float: left;
     text-align: left;
-    width: 70%;
+    width: 100%;
     padding-top: 0vh;
     padding-bottom: 1vh;
   }
@@ -436,7 +447,7 @@ a{
 
   .clubname{
     color: black;
-    font-size: 2.6vw;
+    font-size: 4vw;
     padding-right: 1vw;
     padding-left: 0.5vw;
     vertical-align: top;
@@ -470,11 +481,42 @@ a{
   }
 
 
+  .bookmarksbutton{
+    background-color: #04A777;
+    margin-left: 75%;
+    border: solid;
+    border-color: #04A777;
+    color: white;
+    padding: 0.8vh 3vw;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 2vw;
+    border-radius: 5px;
+    margin-right: 3%;
+  }
+
+  .bookmarksbutton:hover{
+    background-color: #C52233;
+    margin-left: 75%;
+    border: solid;
+    border-color: #C52233;
+    color: white;
+    padding: 0.8vh 3vw;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 2vw;
+    border-radius: 5px;
+    margin-right: 3%;
+  }
+
+
   .clubDescription{
     color: black;
     padding-top: 0vh;
     padding-bottom: 1vh;
-    font-size: 0.6vw;
+    font-size: 1.3vw;
     text-align: left;
     padding-right: 3vw;
     padding-left: 3vw;
@@ -484,7 +526,7 @@ a{
   .clubImage{
     color: white;
     float: left;
-    width: 30%;
+    width: 100%;
     text-align: center;
   }
 
@@ -502,19 +544,20 @@ a{
 
   .container {
     overflow: hidden;
+    padding-bottom: 30vh;
   }
 
   .filterDiv {
     background-color: #ffffff;
     color: black;
     text-align: center;
-    margin-right: 10vh;
-    margin-left: 10vh;
+    margin-right: 5vw;
+    margin-left: 5vw;
     display: none; /* Hidden by default */
   }
 
   #myBtnContainer{
-    padding-top: 2vw;
+    padding-top: 5vw;
     padding-bottom: 0vw;
     padding-right: 3vw;
     padding-left: 3vw;
@@ -531,11 +574,11 @@ a{
     color: white;
     cursor: pointer;
     background-color: #04A777;
-    font-size: 1.5vw;
-    min-width: 15%;
+    font-size: 2.6vw;
+    min-width: 20%;
     padding-top: 0.9vw;
     padding-bottom: 0.9vw;
-    margin: 0.5vw;
+    margin: 1vw;
     border: solid;
     border-radius: 5px;
     border-color: white;
